# SoftRas

./: CMakeLists.txt
cpp/include/softras/: api.h
cpp/src/: api.cpp
examples/: demo_deform.py
soft_renderer/: rasterizer.py
soft_renderer/cuda/: api.h  create_texture_image_cuda.cpp  load_textures_cuda.cpp  soft_rasterize_cuda.cpp  soft_rasterize_cuda_kernel.cu  voxelization_cuda.cpp
soft_renderer/functional/: soft_rasterize.py
